5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1667_2974.log
== TEST (2019-04-16 16:29:16) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor=>troco):
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:19) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor,2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:39) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor,2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:51) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor,2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:34:55) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor,2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:01) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
troco = input("recebera troco ? (S/N) ")
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor, 2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:11) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3

if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(valor, 2))
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:42) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:45) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinehiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:36:11) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinheiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:09) 
-- CODE:
quantidade acai = int(input(" qual e a quantidade de acai? "))
quantidade de salgados = int(input("qual e a quantidade de salgados? "))
valor = float(input(" qual e o valor em dinheiro? "))
acai = quantida acai*24
salgado = quantidade de salgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)
	

-- ERROR:
File "XXXX", line 1
    quantidade acai = int(input())
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:07) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantida acai*24
qts= quantidade de salgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)
	

-- ERROR:
File "XXXX", line 4
    qac= quantida acai*24
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:16) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantida acai*24
qts= quantidade de salgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
File "XXXX", line 4
    qac= quantida acai*24
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:07) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidaacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidaacai*24
NameError: name 'quantidaacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:33) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidaacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidaacai*24
NameError: name 'quantidaacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:48) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidaacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidaacai*24
NameError: name 'quantidaacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:37) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidadedeacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidadedeacai*24
NameError: name 'quantidadedeacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:57) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidadedeacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidadedeacai*24
NameError: name 'quantidadedeacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:11) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantidadedeacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantidadedeacai*24
NameError: name 'quantidadedeacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:39) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quanti_de_acai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quanti_de_acai*24
NameError: name 'quanti_de_acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:13) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quanti_de_acai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quanti_de_acai*24
NameError: name 'quanti_de_acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:44:36) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= quantideacai*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    qac= quantideacai*24
NameError: name 'quantideacai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:29) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= quantidadedesalgados*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    qts= quantidadedesalgados*3
NameError: name 'quantidadedesalgados' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:49) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = acai + salgado
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = acai + salgado
NameError: name 'acai' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:15) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(valor>=troco):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:37) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor=<troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(valor=<troco):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:43) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor=>troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(valor=>troco):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:07) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(valor>=troco):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:43) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(valor=troco):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:47) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor=>troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
File "XXXX", line 7
    if(valor=>troco):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:52) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(valor>=troco):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(valor>=troco):
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:27) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- OUTPUT:
<built-in function round> 2
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:46) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- EXECUTION TIME:
0.200933
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
<built-in function round> 2
Nao
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
<built-in function round> 2
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
<built-in function round> 2
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:51) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round, 2)
print(mensagem)

-- OUTPUT:
<built-in function round> 2
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:19) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)

-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:49:57) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)

-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:50:14) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)

-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:08) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)

-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:51:15) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(mensagem)

-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:01) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2)
print(mensagem)


-- ERROR:
File "XXXX", line 12
    print(mensagem)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:19) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2)
print(mensagem)


-- ERROR:
File "XXXX", line 12
    print(mensagem)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:26) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2)



-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:53:49) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2)
-- ERROR:
File "XXXX", line 12
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:03) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2))
print(mensagem)
-- OUTPUT:
12003
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:54:35) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac/qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2))
print(mensagem)
-- OUTPUT:
4000.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:23:33) 
-- CODE:
qac = int(input(" qual e a quantidade de acai? "))
qts= int(input("qual e a quantidade de salgados? "))
vl = float(input(" qual e o valor em dinheiro? "))
qac= qac*24
qts= qts*3
total = qac+qts
if(vl>=total):
	mensagem = "Sim"
else:
	mensagem = "Nao"
print(round(total,2))
print(mensagem)
-- OUTPUT:
12003
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
